--- a/category.html
+++ b/category.html
@@ -73,7 +73,7 @@
             </ul>
           </li>
 
-          <li><a href="about.html">About</a></li>
+          <!--<li><a href="about.html">About</a></li>-->
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
