--- a/category.html
+++ b/category.html
@@ -74,12 +74,12 @@
           </li>
 
           <!--<li><a href="about.html">About</a></li>-->
-          <li><a href="contact.html">Contact</a></li>
+          <!--<li><a href="contact.html">Contact</a></li>-->
         </ul>
       </nav><!-- .navbar -->
 
       <div class="position-relative">
-        <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
+        
         <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
         <a href="#" class="mx-2"><span class="bi-instagram"></span></a>
 
