--- a/single-post.html
+++ b/single-post.html
@@ -473,7 +473,7 @@
                   <img src="assets/img/post-sq-2.jpg" alt="" class="img-fluid me-3">
                   <div>
                     <div class="post-meta d-block"><span class="date">Culture</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <span>What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</span>
+                    <span>Budgeting 101: Mastering Your Money</span>
                   </div>
                 </a>
               </li>
