--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUCBE</title>
+    <title>SQUBE</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -77,7 +77,7 @@
 </head>
 <body>
     <header>
-        <h1>SCUBE</h1>
+        <h1>SQUBE</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -91,11 +91,11 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 SCUBE</p>
+        <p>&copy; 2024 SQUBE</p>
     </footer>
     <script>
         // Add any JavaScript functionality here
-        console.log("Welcome to SCUBE!");
+        console.log("Welcome to SQUBE!");
     </script>
 </body>
 </html>
