--- a/index.html
+++ b/index.html
@@ -161,7 +161,18 @@
           </div>
         </article>
       </div>
-
+<!-- Blog Post 6 -->
+      <div class="col-12 col-sm-6 col-lg-3">
+        <article class="card h-100">
+          <img src="src/images/harddisk3.jpeg" class="card-img-top" alt="Tech Future Without Screens">
+          <div class="card-body d-flex flex-column">
+            <small class="text-uppercase text-muted fw-semibold">Product review</small>
+            <h5 class="card-title mt-2">Everything You Need to Know About Hard Disk Drives</h5>
+            <p class="card-text">Everything You Need to Know About Hard Disk Drives</p>
+            <a href="./src/component/detailblog.html?harddisk" class="mt-auto text-primary fw-semibold text-decoration-none">Read more →</a>
+          </div>
+        </article>
+      </div>
       <!-- More blog cards can be added similarly -->
 
     </div>
