--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@
           </article>
         </a>
       </div>
+      <!-- Blog for Amazon Alexa -->
+      <div class="col-12 col-sm-6 col-lg-3">
+        <a href="./src/component/detailblog.html?AmazonAlexa" class="text-decoration-none text-reset">
+          <article class="card h-100">
+            <img src="src/images/alexa1.jpg" class="card-img-top" alt="Amazon Alexa smart speaker">
+            <div class="card-body d-flex flex-column">
+              <small class="text-uppercase text-muted fw-semibold">Smart Home</small>
+              <h5 class="card-title mt-2">Amazon Alexa: Transforming Homes</h5>
+              <p class="card-text">Discover how Amazon Alexa is revolutionizing smart homes in India and around the world with voice technology, automation, and more.</p>
+            </div>
+          </article>
+        </a>
+      </div>
       <!-- More blog cards can be added similarly -->
 
     </div>
