--- a/index.html
+++ b/index.html
@@ -86,17 +86,14 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero Section --> 
   <section class="hero" id="home">
     <div class="container">
-      <h1>Welcome to SQUBE</h1>
       <p>Discover fresh insights, reviews, and stories curated just for you.</p>
     </div>
   </section>
@@ -105,35 +102,63 @@
   <main class="container py-4">
     <div class="row g-4">
 
-      <!-- Blog Post 1 -->
+      <!-- Blog Post 2 - Amazon Alexa -->
       <div class="col-12 col-sm-6 col-lg-3">
-        <a href="./src/component/detailblog.html?no_screen" class="text-decoration-none text-reset">
+        <a href="./src/component/detailblog.html?AmazonAlexa" class="text-decoration-none text-reset">
           <article class="card h-100">
-            <img src="src/images/Noscreen2.png" class="card-img-top" alt="Next Tech is No Screen">
+            <img src="src/images/alexa1.jpg" class="card-img-top" alt="Amazon Alexa smart speaker">
             <div class="card-body d-flex flex-column">
-              <small class="text-uppercase text-muted fw-semibold">Technology</small>
-              <h5 class="card-title mt-2">Next Tech is No Screen</h5>
-              <p class="card-text">Phones without screens could be the next evolution in tech.</p>
+              <small class="text-uppercase text-muted fw-semibold">Smart Home</small>
+              <h5 class="card-title mt-2">Amazon Alexa: Transforming Homes</h5>
+              <p class="card-text">Discover how Amazon Alexa is revolutionizing smart homes in India and around the world with voice technology, automation, and more.</p>
             </div>
           </article>
         </a>
       </div>
 
-      <!-- Blog Post 2 -->
+      <!-- Blog Post 3 - Hard Disk -->
       <div class="col-12 col-sm-6 col-lg-3">
-        <a href="./src/component/detailblog.html?kettle_travel" class="text-decoration-none text-reset">
+        <a href="./src/component/detailblog.html?harddisk" class="text-decoration-none text-reset">
           <article class="card h-100">
-            <img src="src/images/kettle.jpg" class="card-img-top" alt="Kettle is my Travel Partner">
+            <img src="src/images/harddisk3.jpeg" class="card-img-top" alt="Tech Future Without Screens">
             <div class="card-body d-flex flex-column">
-              <small class="text-uppercase text-muted fw-semibold">Product Review</small>
-              <h5 class="card-title mt-2">Kettle is my Travel Partner</h5>
-              <p class="card-text">An electric kettle is essential on cold travels. Here's why.</p>
+              <small class="text-uppercase text-muted fw-semibold">Product review</small>
+              <h5 class="card-title mt-2">Everything You Need to Know About Hard Disk Drives</h5>
+              <p class="card-text">Everything You Need to Know About Hard Disk Drives</p>
             </div>
           </article>
         </a>
       </div>
 
-      <!-- Blog Post 3 -->
+      <!-- Blog Post 4 - Dishwasher -->
+      <div class="col-12 col-sm-6 col-lg-3">
+        <a href="./src/component/detailblog.html?Dishwaher" class="text-decoration-none text-reset">
+          <article class="card h-100">
+            <img src="src/images/Dishwahser1.jpg" class="card-img-top" alt="Tech Future Without Screens">
+            <div class="card-body d-flex flex-column">
+              <small class="text-uppercase text-muted fw-semibold">Product review</small>
+              <h5 class="card-title mt-2">bachelor Best friend</h5>
+              <p class="card-text">Conquer the Kitchen Chaos: Why a Dishwasher Could Be Your New Best Friend</p>
+            </div>
+          </article>
+        </a>
+      </div>
+
+      <!-- Blog Post 5 - Spinning Machine -->
+      <div class="col-12 col-sm-6 col-lg-3">
+        <a href="./src/component/detailblog.html?future_ui" class="text-decoration-none text-reset">
+          <article class="card h-100">
+            <img src="src/images/Washing machine.jpg" class="card-img-top" alt="Tech Future Without Screens">
+            <div class="card-body d-flex flex-column">
+              <small class="text-uppercase text-muted fw-semibold">Product review</small>
+              <h5 class="card-title mt-2">Spinning  machine</h5>
+              <p class="card-text">Ever wonder how washing powder gets your clothes clean? It's all thanks to the fascinating dance between polar and nonpolar molecules!.</p>
+            </div>
+          </article>
+        </a>
+      </div>
+
+      <!-- Blog Post 6 - Smart Light -->
       <div class="col-12 col-sm-6 col-lg-3">
         <a href="./src/component/detailblog.html?topic" class="text-decoration-none text-reset">
           <article class="card h-100">
@@ -147,72 +172,36 @@
         </a>
       </div>
 
-      <!-- Blog Post 4 -->
+      <!-- Blog Post 7 - Kettle Travel -->
       <div class="col-12 col-sm-6 col-lg-3">
-        <a href="./src/component/detailblog.html?future_ui" class="text-decoration-none text-reset">
+        <a href="./src/component/detailblog.html?kettle_travel" class="text-decoration-none text-reset">
           <article class="card h-100">
-            <img src="src/images/Washing machine.jpg" class="card-img-top" alt="Tech Future Without Screens">
+            <img src="src/images/kettle.jpg" class="card-img-top" alt="Kettle is my Travel Partner">
             <div class="card-body d-flex flex-column">
-              <small class="text-uppercase text-muted fw-semibold">Product review</small>
-              <h5 class="card-title mt-2">Spinning  machine</h5>
-              <p class="card-text">Ever wonder how washing powder gets your clothes clean? It's all thanks to the fascinating dance between polar and nonpolar molecules!.</p>
+              <small class="text-uppercase text-muted fw-semibold">Product Review</small>
+              <h5 class="card-title mt-2">Kettle is my Travel Partner</h5>
+              <p class="card-text">An electric kettle is essential on cold travels. Here's why.</p>
             </div>
           </article>
         </a>
       </div>
-<!-- Blog Post 5 -->
+
+      <!-- Blog Post 8 - No Screen Tech (Oldest) -->
       <div class="col-12 col-sm-6 col-lg-3">
-        <a href="./src/component/detailblog.html?Dishwaher" class="text-decoration-none text-reset">
+        <a href="./src/component/detailblog.html?no_screen" class="text-decoration-none text-reset">
           <article class="card h-100">
-            <img src="src/images/Dishwahser1.jpg" class="card-img-top" alt="Tech Future Without Screens">
+            <img src="src/images/Noscreen2.png" class="card-img-top" alt="Next Tech is No Screen">
             <div class="card-body d-flex flex-column">
-              <small class="text-uppercase text-muted fw-semibold">Product review</small>
-              <h5 class="card-title mt-2">bachelor Best friend</h5>
-              <p class="card-text">Conquer the Kitchen Chaos: Why a Dishwasher Could Be Your New Best Friend</p>
+              <small class="text-uppercase text-muted fw-semibold">Technology</small>
+              <h5 class="card-title mt-2">Next Tech is No Screen</h5>
+              <p class="card-text">Phones without screens could be the next evolution in tech.</p>
             </div>
           </article>
         </a>
       </div>
-<!-- Blog Post 6 -->
-      <div class="col-12 col-sm-6 col-lg-3">
-        <a href="./src/component/detailblog.html?harddisk" class="text-decoration-none text-reset">
-          <article class="card h-100">
-            <img src="src/images/harddisk3.jpeg" class="card-img-top" alt="Tech Future Without Screens">
-            <div class="card-body d-flex flex-column">
-              <small class="text-uppercase text-muted fw-semibold">Product review</small>
-              <h5 class="card-title mt-2">Everything You Need to Know About Hard Disk Drives</h5>
-              <p class="card-text">Everything You Need to Know About Hard Disk Drives</p>
-            </div>
-          </article>
-        </a>
-      </div>
-      <!-- Blog for Amazon Alexa -->
-      <div class="col-12 col-sm-6 col-lg-3">
-        <a href="./src/component/detailblog.html?AmazonAlexa" class="text-decoration-none text-reset">
-          <article class="card h-100">
-            <img src="src/images/alexa1.jpg" class="card-img-top" alt="Amazon Alexa smart speaker">
-            <div class="card-body d-flex flex-column">
-              <small class="text-uppercase text-muted fw-semibold">Smart Home</small>
-              <h5 class="card-title mt-2">Amazon Alexa: Transforming Homes</h5>
-              <p class="card-text">Discover how Amazon Alexa is revolutionizing smart homes in India and around the world with voice technology, automation, and more.</p>
-            </div>
-          </article>
-        </a>
-      </div>
-      <!-- More blog cards can be added similarly -->
 
     </div>
   </main>
-
-  <!-- About Section -->
-  <section id="about" class="py-5 bg-white">
-    <div class="container text-center">
-      <h2 class="fw-bold mb-3">About Us</h2>
-      <p class="lead text-muted mx-auto" style="max-width: 700px;">
-        SQUBE is a platform dedicated to sharing knowledge, insights, and practical reviews in the world of technology and lifestyle. Our mission is to inspire and inform with authentic stories and trusted reviews.
-      </p>
-    </div>
-  </section>
 
   <!-- Footer -->
   <footer>
