--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SQUBE Blog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -13,7 +14,7 @@
 
     .navbar {
       background-color: white;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     }
 
     .hero {
@@ -41,12 +42,12 @@
 
     .card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     }
 
     a.text-reset:hover .card,
     a.text-reset:focus .card {
-      box-shadow: 0 10px 30px rgba(0,0,0,0.13);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.13);
       transform: translateY(-7px);
     }
 
@@ -75,6 +76,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <!-- Navbar -->
@@ -86,12 +88,18 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./finance/index.html">Finance</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Hero Section --> 
+  <!-- Hero Section -->
   <section class="hero" id="home">
     <div class="container">
       <p>Discover fresh insights, reviews, and stories curated just for you.</p>
@@ -110,7 +118,8 @@
             <div class="card-body d-flex flex-column">
               <small class="text-uppercase text-muted fw-semibold">Smart Home</small>
               <h5 class="card-title mt-2">Amazon Alexa: Transforming Homes</h5>
-              <p class="card-text">Discover how Amazon Alexa is revolutionizing smart homes in India and around the world with voice technology, automation, and more.</p>
+              <p class="card-text">Discover how Amazon Alexa is revolutionizing smart homes in India and around the
+                world with voice technology, automation, and more.</p>
             </div>
           </article>
         </a>
@@ -151,8 +160,9 @@
             <img src="src/images/Washing machine.jpg" class="card-img-top" alt="Tech Future Without Screens">
             <div class="card-body d-flex flex-column">
               <small class="text-uppercase text-muted fw-semibold">Product review</small>
-              <h5 class="card-title mt-2">Spinning  machine</h5>
-              <p class="card-text">Ever wonder how washing powder gets your clothes clean? It's all thanks to the fascinating dance between polar and nonpolar molecules!.</p>
+              <h5 class="card-title mt-2">Spinning machine</h5>
+              <p class="card-text">Ever wonder how washing powder gets your clothes clean? It's all thanks to the
+                fascinating dance between polar and nonpolar molecules!.</p>
             </div>
           </article>
         </a>
@@ -166,7 +176,8 @@
             <div class="card-body d-flex flex-column">
               <small class="text-uppercase text-muted fw-semibold">Lifestyle</small>
               <h5 class="card-title mt-2">My Simple Take on a New Smart Light</h5>
-              <p class="card-text">I bought a new smart light, and it's pretty cool. The best part is how easy it is to use.</p>
+              <p class="card-text">I bought a new smart light, and it's pretty cool. The best part is how easy it is to
+                use.</p>
             </div>
           </article>
         </a>
@@ -212,4 +223,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
