--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./finance/index.html">Finance</a>
+            <a class="nav-link" href="calculators.html">Calculators</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="finance.html">Finance</a>
           </li>
         </ul>
       </div>
