--- a/finance-en.html
+++ b/finance-en.html
@@ -43,124 +43,19 @@
 
     <!-- Main Content -->
     <main class="container py-5">
-        <div class="row g-4">
+        <div class="row justify-content-center g-4">
 
-            <!-- Featured Card -->
-            <div class="col-12 mb-4">
-                <div class="card border-0 shadow-sm overflow-hidden blog-card">
-                    <div class="row g-0">
-                        <div class="col-lg-7 bg-gradient-primary d-flex align-items-center justify-content-center text-white p-5"
-                            style="min-height: 300px;">
-                            <div class="text-center">
-                                <i class="fas fa-piggy-bank fa-5x mb-4 opacity-50"></i>
-                                <h2 class="fw-bold mb-3">First Step to Financial Freedom</h2>
-                                <p class="lead mb-0">How to handle your finances in your 20s? A complete guide.</p>
-                            </div>
+            <!-- Coming Soon Card -->
+            <div class="col-md-9 col-lg-7">
+                <div class="card shadow-sm border-0 d-flex align-items-center justify-content-center text-center p-5"
+                    style="border: 2px dashed #007bff !important; min-height: 450px; background: rgba(0, 123, 255, 0.03); border-radius: 20px;">
+                    <div class="coming-soon-content">
+                        <div class="icon-pulse mb-4">
+                            <i class="fas fa-rocket fa-5x text-primary"></i>
                         </div>
-                        <div class="col-lg-5 p-4 d-flex flex-column justify-content-center">
-                            <span class="badge bg-soft-primary text-primary category-badge mb-2">Management</span>
-                            <h3 class="fw-bold mb-3">How to Create Your Budget?</h3>
-                            <p class="text-muted">Saving money is not a difficult task. With proper planning, anyone can
-                                achieve financial freedom...</p>
-                            <a href="#" class="btn btn-primary align-self-start mt-3">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Blog Grid -->
-            <!-- Post 1 -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card h-100 shadow-sm blog-card border-0">
-                    <div class="blog-img-placeholder bg-gradient-success rounded-top d-flex align-items-center justify-content-center"
-                        style="height: 200px;">
-                        <i class="fas fa-chart-line fa-4x text-white opacity-50"></i>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-2">
-                            <span class="badge bg-soft-success text-success category-badge">Investment</span>
-                        </div>
-                        <h4 class="card-title fw-bold blog-title">What are Mutual Funds?</h4>
-                        <p class="card-text text-muted">A simple explanation for beginners. Learn about types of mutual
-                            funds and their benefits.</p>
-                        <hr class="my-3 opacity-10">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> Feb 21, 2026</small>
-                            <a href="#" class="btn btn-link text-primary p-0 fw-bold text-decoration-none">Read <i
-                                    class="fas fa-arrow-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Post 2 -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card h-100 shadow-sm blog-card border-0">
-                    <div class="blog-img-placeholder bg-gradient-info rounded-top d-flex align-items-center justify-content-center"
-                        style="height: 200px;">
-                        <i class="fas fa-coins fa-4x text-white opacity-50"></i>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-2">
-                            <span class="badge bg-soft-info text-info category-badge">Savings</span>
-                        </div>
-                        <h4 class="card-title fw-bold blog-title">Is Gold Investment Profitable?</h4>
-                        <p class="card-text text-muted">Gold is a favorite investment for many. How much growth does it
-                            give in the current environment?</p>
-                        <hr class="my-3 opacity-10">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> Feb 15, 2026</small>
-                            <a href="#" class="btn btn-link text-primary p-0 fw-bold text-decoration-none">Read <i
-                                    class="fas fa-arrow-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Post 3 -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card h-100 shadow-sm blog-card border-0">
-                    <div class="blog-img-placeholder bg-gradient-primary rounded-top d-flex align-items-center justify-content-center"
-                        style="height: 200px;">
-                        <i class="fas fa-shield-alt fa-4x text-white opacity-50"></i>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-2">
-                            <span class="badge bg-soft-primary text-primary category-badge">Insurance</span>
-                        </div>
-                        <h4 class="card-title fw-bold blog-title">Why Life Insurance is Essential?</h4>
-                        <p class="card-text text-muted">Life insurance is crucial for your family's safety. Which type
-                            of insurance is right for you?</p>
-                        <hr class="my-3 opacity-10">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> Feb 10, 2026</small>
-                            <a href="#" class="btn btn-link text-primary p-0 fw-bold text-decoration-none">Read <i
-                                    class="fas fa-arrow-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Post 4 -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card h-100 shadow-sm blog-card border-0">
-                    <div class="blog-img-placeholder bg-secondary rounded-top d-flex align-items-center justify-content-center"
-                        style="height: 200px;">
-                        <i class="fas fa-home fa-4x text-white opacity-50"></i>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-2">
-                            <span class="badge bg-soft-secondary text-secondary category-badge">Home Loan</span>
-                        </div>
-                        <h4 class="card-title fw-bold blog-title">When is it right to buy a home?</h4>
-                        <p class="card-text text-muted">Is it better to stay in rent or buy your own house by paying
-                            EMI? A comparison.</p>
-                        <hr class="my-3 opacity-10">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> Feb 05, 2026</small>
-                            <a href="#" class="btn btn-link text-primary p-0 fw-bold text-decoration-none">Read <i
-                                    class="fas fa-arrow-right ms-1"></i></a>
-                        </div>
+                        <h2 class="display-5 fw-bold text-dark mb-3">Coming Soon...</h2>
+                        <p class="lead text-muted mb-0">More insightful articles on finance are being prepared just for
+                            you. Stay tuned!</p>
                     </div>
                 </div>
             </div>
