--- a/finance-ta.html
+++ b/finance-ta.html
@@ -44,125 +44,19 @@
 
     <!-- Main Content -->
     <main class="container py-5">
-        <div class="row g-4">
+        <div class="row justify-content-center g-4">
 
-            <!-- Featured Card -->
-            <div class="col-12 mb-4">
-                <div class="card border-0 shadow-sm overflow-hidden blog-card">
-                    <div class="row g-0">
-                        <div class="col-lg-7 bg-gradient-primary d-flex align-items-center justify-content-center text-white p-5"
-                            style="min-height: 300px;">
-                            <div class="text-center">
-                                <i class="fas fa-piggy-bank fa-5x mb-4 opacity-50"></i>
-                                <h2 class="fw-bold mb-3">நிதி சுதந்திரத்திற்கான முதல் படி</h2>
-                                <p class="lead mb-0">உங்களுடைய 20-களில் நிதியை எவ்வாறு கையாள்வது? ஒரு முழுமையான
-                                    வழிகாட்டி.</p>
-                            </div>
+            <!-- Coming Soon Card -->
+            <div class="col-md-9 col-lg-7">
+                <div class="card shadow-sm border-0 d-flex align-items-center justify-content-center text-center p-5"
+                    style="border: 2px dashed #007bff !important; min-height: 450px; background: rgba(0, 123, 255, 0.03); border-radius: 20px;">
+                    <div class="coming-soon-content">
+                        <div class="icon-pulse mb-4">
+                            <i class="fas fa-rocket fa-5x text-primary"></i>
                         </div>
-                        <div class="col-lg-5 p-4 d-flex flex-column justify-content-center">
-                            <span class="badge bg-soft-primary text-primary category-badge mb-2">மேலாண்மை</span>
-                            <h3 class="fw-bold mb-3">உங்கள் பட்ஜெட்டை உருவாக்குவது எப்படி?</h3>
-                            <p class="text-muted">பணத்தை சேமிப்பது என்பது கடினமான வேலையல்ல. சரியான திட்டமிடல் இருந்தால்
-                                எவரும் நிதி சுதந்திரத்தை அடைய முடியும்...</p>
-                            <a href="#" class="btn btn-primary align-self-start mt-3">மேலும் படிக்க</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Blog Grid -->
-            <!-- Post 1 -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card h-100 shadow-sm blog-card border-0">
-                    <div class="blog-img-placeholder bg-gradient-success rounded-top d-flex align-items-center justify-content-center"
-                        style="height: 200px;">
-                        <i class="fas fa-chart-line fa-4x text-white opacity-50"></i>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-2">
-                            <span class="badge bg-soft-success text-success category-badge">முதலீடு</span>
-                        </div>
-                        <h4 class="card-title fw-bold blog-title">மியூச்சுவல் ஃபண்ட் (Mutual Funds) என்றால் என்ன?</h4>
-                        <p class="card-text text-muted">தொடக்க நிலையில் உள்ளவர்களுக்கான எளிய விளக்கம். மியூச்சுவல்
-                            ஃபண்டில் உள்ள வகைகள் மற்றும் நன்மைகள் பற்றி தெரிந்துகொள்ளுங்கள்.</p>
-                        <hr class="my-3 opacity-10">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> பிப்ரவரி 21, 2026</small>
-                            <a href="#" class="btn btn-link text-primary p-0 fw-bold text-decoration-none">வாசிக்க <i
-                                    class="fas fa-arrow-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Post 2 -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card h-100 shadow-sm blog-card border-0">
-                    <div class="blog-img-placeholder bg-gradient-info rounded-top d-flex align-items-center justify-content-center"
-                        style="height: 200px;">
-                        <i class="fas fa-coins fa-4x text-white opacity-50"></i>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-2">
-                            <span class="badge bg-soft-info text-info category-badge">சேமிப்பு</span>
-                        </div>
-                        <h4 class="card-title fw-bold blog-title">தங்கத்தில் முதலீடு செய்வது லாபகரமானதா?</h4>
-                        <p class="card-text text-muted">இந்தியர்களின் விருப்பமான முதலீடான தங்கம், இன்றைய சூழலில் எத்தகைய
-                            வளர்ச்சியை தருகிறது? டிஜிட்டல் கோல்ட் பற்றி தெரியுமா?</p>
-                        <hr class="my-3 opacity-10">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> பிப்ரவரி 15, 2026</small>
-                            <a href="#" class="btn btn-link text-primary p-0 fw-bold text-decoration-none">வாசிக்க <i
-                                    class="fas fa-arrow-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Post 3 -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card h-100 shadow-sm blog-card border-0">
-                    <div class="blog-img-placeholder bg-gradient-primary rounded-top d-flex align-items-center justify-content-center"
-                        style="height: 200px;">
-                        <i class="fas fa-shield-alt fa-4x text-white opacity-50"></i>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-2">
-                            <span class="badge bg-soft-primary text-primary category-badge">காப்பீடு</span>
-                        </div>
-                        <h4 class="card-title fw-bold blog-title">ஏன் ஆயுள் காப்பீடு (Life Insurance) அவசியம்?</h4>
-                        <p class="card-text text-muted">உங்கள் குடும்பத்தின் பாதுகாப்பிற்கு ஆயுள் காப்பீடு மிக
-                            முக்கியமானது. எந்த வகையான காப்பீடு உங்களுக்கு ஏற்றது?</p>
-                        <hr class="my-3 opacity-10">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> பிப்ரவரி 10, 2026</small>
-                            <a href="#" class="btn btn-link text-primary p-0 fw-bold text-decoration-none">வாசிக்க <i
-                                    class="fas fa-arrow-right ms-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Post 4 -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card h-100 shadow-sm blog-card border-0">
-                    <div class="blog-img-placeholder bg-secondary rounded-top d-flex align-items-center justify-content-center"
-                        style="height: 200px;">
-                        <i class="fas fa-home fa-4x text-white opacity-50"></i>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-2">
-                            <span class="badge bg-soft-secondary text-secondary category-badge">வீட்டுக் கடன்</span>
-                        </div>
-                        <h4 class="card-title fw-bold blog-title">சொந்த வீடு வாங்குவது எப்போது சரியாக இருக்கும்?</h4>
-                        <p class="card-text text-muted">வாடகைக்கு இருப்பது நல்லதா அல்லது இஎம்ஐ (EMI) கட்டி சொந்த வீட்டை
-                            வாங்குவது நல்லதா? ஒரு ஒப்பீடு.</p>
-                        <hr class="my-3 opacity-10">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> பிப்ரவரி 05, 2026</small>
-                            <a href="#" class="btn btn-link text-primary p-0 fw-bold text-decoration-none">வாசிக்க <i
-                                    class="fas fa-arrow-right ms-1"></i></a>
-                        </div>
+                        <h2 class="display-5 fw-bold text-dark mb-3">விரைவில் வரும்...</h2>
+                        <p class="lead text-muted mb-0">உங்களுக்காக மேலும் பல பயனுள்ள நிதி பற்றிய கட்டுரைகள் தயாராகிக்
+                            கொண்டிருக்கின்றன. எங்களோடு இணைந்திருங்கள்!</p>
                     </div>
                 </div>
             </div>
